# Store_Electronic

./: README.md  task 14_1  task 14_2,3
store/: pyproject.toml  utils.py
tests/: test_utils.py
